[DOM] Fix null namespace handling in Node.isDefaultNamespace().

- Fix the implementation bug.
- Remove obsolete test in the legacy DOM conformance tests.
- Add tests for DocumentType node to WPT.

BUG=699812

Review-Url: https://codereview.chromium.org/2737273002
Cr-Commit-Position: refs/heads/master@{#456002}

Former-commit-id: 089c67c27a4ea8c5a1aeafcc7674bff96298a1e3